	Fixed (undocumented) AD canonical DN (ITS#3000)
	Fixed undefined attribute name request in back-sql search (ITS#3005)
	Added ACL set logging (ITS#2949)
	Fixed erroneous illegal filter handling (ITS#2977)
	Fixed monitor backend crash when used with overlays (ITS#3023)
	Fixed oracle-related issues in back-sql (ITS#2641)
	Fixed '=' escape in DN (ITS#3009)
	Documentation
		Fixed ldapmodrdn(1) manpage (ITS#3003)

OpenLDAP 2.2.6 Release
	Fixed slapd SASL callback handling (ITS#2926)
	Fixed slapd backglue sizelimit bug (ITS#2888)
	Fixed slapd numericStringMatch bug (ITS#2938)
	Fixed libldap maxbuf handling (ITS#2944,2956)
	Fixed libldap_r abandon msgid mutex bug 
	Fixed liblutil NS MTA MD5 passwd len bug (ITS#2899)
	Fixed slapd pcache DB init bug (ITS#2960)
	Updated libldap reference handling (ITS#2894)
	Updated slapd syncrepl support (multiple)
	Updated slapd connection deferred logging (ITS#2959)
	Updated slapd filter logging
	Updated back-ldap
	Updated back-bdb to use Btree indices instead of Hashes
		Requires recreation of indices of existing databases
	Added slapd limit groups (ITS#2967)
	Build Environment
		Fixed test021 portable echo bug (ITS#2933, ITS#2879)
		Fixed EBCDIC conversion bugs (ITS#2962)
	Documentation
		Misc. man page updates
	Contributed Software
		Added slapd passwd modules
		Updated libcldap++

OpenLDAP 2.2.5 Release
	Fixed slapd filter bug (ITS#2901)
	Fixed slapd/syncrepl shutdown bug (ITS#2910)
	Fixed back-glue sizeExceeded bug (ITS#2888)
	Fixed back-bdb syncrepl psearch add bug
	Fixed back-bdb/tools duplicate entry detection (ITS#2905)
	Fixed back-ldap suffix massage when --enable-rewrite=no (ITS#2923)
	Updated slapi to honor access denied return value from ACL plugins
	Fixed slapcat backglue subsequent subordinates bug (ITS#2924)
	Updated slappasswd error reporting (ITS#2906)
	Fixed CYGWIN/MINGW threading bug (ITS#2921)
	Fixed GYGWIN/MINGW ldapsearch glob problem (ITS#2922)
	Build environment
		Fixed slapd passwd portable C bug (ITS#2900)