@@ -11,6 +11,8 @@ OpenLDAP 2.2.7 Engineering
 	Fixed monitor backend crash when used with overlays (ITS#3023)
 	Fixed oracle-related issues in back-sql (ITS#2641)
 	Fixed '=' escape in DN (ITS#3009)
+	Build Environment
+		Fixed libldap T_SRV portability bug
 	Documentation
 		Fixed ldapmodrdn(1) manpage (ITS#3003)
 
